[tool.poetry]
name = "python-web-hw-11"
version = "0.1.0"
description = ""
authors = ["Vadim Marenko <vadim.marenko@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "python_web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
